--- a/index.html
+++ b/index.html
@@ -1,173 +1,97 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html >
+
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
+
     <title>chatter|app</title>
 
-    <!-- #4 embed the #roboto #font. This needs to go above your css -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
-
-    <!-- #4 #sweat out the styles by creating an #external css -->
-    <link rel="stylesheet" href="css/style.css" />
-
     
+    <link rel="stylesheet" href="../css/style.css"/>
+
+    <meta charset="UTF-8">
+
 </head>
 <body>
-<!-- #4 #one #page -->
+<!-- channel area -->
 <div id="channels">
-    <h1>
-        <!-- #3 #channels #moocus the talkative duck-->
-        <img src="http://ip.lfe.mw.tum.de/sections/moocus.png" alt="Moocus, the chatty duck!" style="height: 56px;">
-        chatter|app
-    </h1>
+    <h1><img src="https://ip.lfe.mw.tum.de/sections/moocus.png" style="width: 56px; height: 56px;" alt="picture of the talkative duck">chatter|app</h1>
 
-    <!-- #3 #channels #list is much better, than headlines or paragraphs... -->
     <ul>
-        <li>#Yummy
-            <!-- #3 #channels #favorite this is not starred -->
-            <img src="http://ip.lfe.mw.tum.de/sections/star-o.png" alt="not starred">
-        </li>
+        <li>#Yummy<img src="https://ip.lfe.mw.tum.de/sections/star.png" style="width: 20px; height: 20px;" alt="favorite"></li>
+        <li class="selected">#SevenContinents<img src="https://ip.lfe.mw.tum.de/sections/star.png" style="width: 20px; height: 20px;" alt="favorite"></li>
+        <li>#KillerApp<img src="https://ip.lfe.mw.tum.de/sections/star-o.png" style="width: 20px; height: 20px;" alt="non-favorite"></li>
+        <li>#FirstPersonOnMars<img src="https://ip.lfe.mw.tum.de/sections/star-o.png" style="width: 20px; height: 20px;" alt="non-favorite"></li>
+        <li>#Octoberfest<img src="https://ip.lfe.mw.tum.de/sections/star.png" style="width: 20px; height: 20px;" alt="favorite"></li>
+        </ul>
 
-        <!-- #4 #channel is #highlighted -->
-        <li class="selected">
-            #SevenContinents
-            <!-- #3 #channels #favorite this is starred -->
-            <img src="http://ip.lfe.mw.tum.de/sections/star.png" alt="starred">
-        </li>
-        <li>#KillerApp
-            <!-- #3 #channels #favorite this is not starred -->
-            <img src="http://ip.lfe.mw.tum.de/sections/star-o.png" alt="not starred">
-        </li>
-        <li>#FirstPersonOnMars
-            <!-- #3 #channels #favorite this is starred -->
-            <img src="http://ip.lfe.mw.tum.de/sections/star.png" alt="starred">
-        </li>
-        <li>#Octoberfest
-            <!-- #3 #channels #favorite this is not starred -->
-            <img src="http://ip.lfe.mw.tum.de/sections/star-o.png" alt="not starred">
-        </li>
-    </ul>
-
-    <!-- #3 #tab-bar #container -->
-    <!-- #4 #sweat #tab-bar -->
     <div id="tab-bar">
-        <!-- #4 #tab-bar selected channel should be #highlighted -->
-        <button class="selected">
-            <!-- #3 #tab-bar #images -->
-            <img src="http://ip.lfe.mw.tum.de/sections/lightbulb-o.png" alt="Bulb">
-            New
-        </button>
-        <button>
-            <!-- #3 #tab-bar #images -->
-            <img src="http://ip.lfe.mw.tum.de/sections/fire.png" alt="Hot">
-            Trending
-        </button>
-        <button>
-            <!-- #3 #tab-bar #images -->
-            <img src="http://ip.lfe.mw.tum.de/sections/star.png" alt="Star">
-            Favorites
-        </button>
+        <button class="selected"><img src="https://ip.lfe.mw.tum.de/sections/lightbulb-o.png" style="width: 20px; height: 20px;" alt="new">new</button>
+        <button><img src="https://ip.lfe.mw.tum.de/sections/fire.png" style="width: 20px; height: 20px;" alt="trending">trending</button>
+        <button><img src="https://ip.lfe.mw.tum.de/sections/star.png" style="width: 20px; height: 20px;" alt="favorites">favorites</button>
     </div>
 </div>
-
-<!-- #4 #one #page -->
+<!-- chat area -->
 <div id="chat">
-    <h1>
-        #SevenContinents
+    <h1>#SevenContinents
         <small>by
-            <strong>cheeses.yard.applies</strong>
+            <strong><a href="https://map.what3words.com/cheeses.yard.applies" target="_blank">cheeses.yard.applies</a></strong>
         </small>
     </h1>
 
-    <!-- #3 #chat #container -->
-    <!-- #4 assign a #class to all your #messages to address them with css -->
-    <!-- #4 apply a class "own" to your #messages to align them separately with #margins -->
     <div class="message own">
         <h3>
-            <!-- #3 #chat #location points to w3w in a new tab -->
-            <a href="http://w3w.co/cheeses.yard.applies" target="_blank">
-                <strong>cheeses.yard.applies</strong>
-            </a>
+            <strong><a href="https://map.what3words.com/cheeses.yard.applies" target="_blank">cheeses.yard.applies</a></strong>
             Wed, June 20th, 13:37
             <em>15 min. left</em>
         </h3>
         <p>What's the place you folks call home?</p>
         <button>+5 min.</button>
-    </div>
-
-    <!-- #3 #chat #container -->
-    <!-- #4 #messages #class -->
+    </div> 
     <div class="message">
         <h3>
-            <!-- #3 #chat #location points to w3w in a new tab -->
-            <a href="http://w3w.co/truck.cotton.zone" target="_blank">
-                <strong>truck.cotton.zone</strong>
-            </a>
+            <strong><a href="https://map.what3words.com/truck.cotton.zone" target="_blank">truck.cotton.zone</a></strong>
             Wed, June 20th, 13:39
             <em>4 min. left</em>
         </h3>
         <p>BRISBANE! Hang loose!</p>
         <button>+5 min.</button>
     </div>
-
-    <!-- #3 #chat #container -->
-    <!-- #4 #messages #class -->
     <div class="message">
         <h3>
-            <!-- #3 #chat #location points to w3w in a new tab -->
-            <a href="http://w3w.co/thus.best.dishes" target="_blank">
-                <strong>thus.best.dishes</strong>
-            </a>
+            <strong><a href="https://map.what3words.com/thus.best.dishes" target="_blank">thus.best.dishes</a></strong>
             Wed, June 20th, 14:02
             <em>12 min. left</em>
         </h3>
         <p>The big apple.</p>
         <button>+5 min.</button>
     </div>
-
-    <!-- #3 #chat #container -->
-    <!-- #4 #messages #class -->
     <div class="message">
         <h3>
-            <!-- #3 #chat #location points to w3w in a new tab -->
-            <a href="http://w3w.co/driveway.helper.magazine" target="_blank">
-                <strong>driveway.helper.magazine</strong>
-            </a>
+            <strong><a href="https://map.what3words.com/driveway.helper.magazine" target="_blank">driveway.helper.magazine</a></strong>
             Wed, June 20th, 14:02
             <em>7 min. left</em>
         </h3>
-        <p>Eu sou um Cariocas.</p>
+        <p>Eu sou um Carocas.</p>
         <button>+5 min.</button>
     </div>
-
-    <!-- #3 #chat #container -->
-    <!-- #4 #messages #class -->
     <div class="message">
         <h3>
-            <!-- #3 #chat #location points to w3w in a new tab -->
-            <a href="http://w3w.co/escapes.pitch.saucepan" target="_blank">
-                <strong>escapes.pitch.saucepan</strong>
-            </a>
+            <a href="http://w3w.co/escapes.pitch.saucepan" target="_blank">escapes.pitch.saucepan</a></strong>
             Wed, June 20th, 14:07
             <em>14 min. left</em>
         </h3>
         <p>Greetings from the western cape!</p>
-        <button>+5 min.</button>
+        <button>+5 min.</button>        
     </div>
-
-    <!-- #3 #chat #container -->
-    <!-- #4 #messages #class -->
     <div class="message">
         <h3>
-            <!-- #3 #chat #location points to w3w in a new tab -->
-            <a href="http://w3w.co/meanings.identity.pays" target="_blank">
-                <strong>meanings.identity.pays</strong>
-            </a>
+            <strong><a href="https://map.what3words.com/meanings.identity.pays" target="_blank">meanings.identity.pays</a></strong>
             Wed, June 20th, 04:08
             <em>15 min. left</em>
         </h3>
         <p>北京</p>
-        <button>+5 min.</button>
+        <button>+5 min.</button>        
     </div>
 </div>
 
